# pythonStudy

./: .breakpoints  calculator.py  indeed.py  main.py  pyproject.toml
